--- a/LemonadeStand/LemonadeStand/LemonadeStand.csproj
+++ b/LemonadeStand/LemonadeStand/LemonadeStand.csproj
@@ -43,11 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="customer.cs" />
-    <Compile Include="game.cs" />
+    <Compile Include="Customer.cs" />
+    <Compile Include="Game.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="weather.cs" />
+    <Compile Include="Recipe.cs" />
+    <Compile Include="Weather.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
