--- a/LemonadeStand/LemonadeStand/LemonadeStand.csproj
+++ b/LemonadeStand/LemonadeStand/LemonadeStand.csproj
@@ -45,9 +45,12 @@
   <ItemGroup>
     <Compile Include="Customer.cs" />
     <Compile Include="Game.cs" />
+    <Compile Include="Inventory.cs" />
+    <Compile Include="Player.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Recipe.cs" />
+    <Compile Include="Store.cs" />
     <Compile Include="Weather.cs" />
   </ItemGroup>
   <ItemGroup>
