--- a/LemonadeStand/LemonadeStand/LemonadeStand.csproj
+++ b/LemonadeStand/LemonadeStand/LemonadeStand.csproj
@@ -44,11 +44,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BasicRecipe.cs" />
+    <Compile Include="Customer.cs" />
+    <Compile Include="CustomerCountLogic.cs" />
     <Compile Include="CustomRecipe.cs" />
+    <Compile Include="Day.cs" />
+    <Compile Include="Game.cs" />
     <Compile Include="Inventory.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RunDay.cs" />
+    <Compile Include="RunGame.cs" />
     <Compile Include="Store.cs" />
     <Compile Include="Validation.cs" />
     <Compile Include="Weather.cs" />
